--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -1,7 +1,8 @@
 .productCard {
-    width: 30%;
-    margin: 1%;
-    padding: 16px;
+    width: 34rem;
+    min-height: 21rem;
+    margin: 2rem;
+    padding: 1rem;
     border: 1px solid #ddd;
     border-radius: 8px;
     transition: box-shadow 0.3s ease, transform 0.3s ease;
@@ -18,7 +19,7 @@
   }
   
   .productImage {
-    width: 100%;
+    max-width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 4px;
@@ -53,9 +54,11 @@
   }
   
   .modalImage {
-    width: 100%;
-    height: auto;
+    max-width: 55rem;
+    height: 34rem;
     margin-bottom: 16px;
+    align-self: center;
+    justify-self: center;
   }
   
   .thumbnailContainer {
