--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -101,12 +101,13 @@
     .mobileMenu {
         display: block;
         position: fixed;
-        top: 80px;
+        top: 0;
         left: -100%;
-        width: 70%;
-        height: 60%;
-        background: #333;
+        width: 60%;
+        height: 100%;
+        background: #1a1a1a;
         padding: 20px;
+        padding-top: 80px;
         transition: left 0.3s;
     }
 
@@ -116,11 +117,11 @@
 
     .closeMenu {
         position: absolute;
-        top: 10px;
-        right: 10px;
+        top: 15px;
+        right: 15px;
         background: none;
         color: white;
-        font-size: 24px;
+        font-size: 48px;
         border: none;
         cursor: pointer;
     }
