--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -205,11 +205,11 @@
     transition: background 0.2s ease;
   }
   
-  .cartControls button:hover {
+  .modal button:hover {
     background: #005ecb;
   }
   
-  /* button {
+  .modal > button {
     padding: 12px 18px;
     border-radius: 12px;
     background: #007aff;
@@ -222,18 +222,18 @@
     margin-top: 16px;
   }
   
-  button:hover {
+  .modal > button:hover {
     background: #005ecb;
   }
   
-  button:last-child {
+  .modal > button:last-child {
     background: #e0e0e0;
     color: #333;
   }
   
-  button:last-child:hover {
+  .modal > button:last-child:hover {
     background: #cfcfcf;
-  } */
+  }
 
   .modalImage {
     max-width: 100%;
@@ -242,4 +242,21 @@
     margin-bottom: 16px;
     object-fit: contain;
   }
+  .modalContent {
+    max-height: 300px;
+    overflow-y: auto;
+    padding: 10px;
+  }
+  @media (max-width: 600px) {
+    .modal {
+      width: 90%;
+    }
   
+    .modalContent {
+      max-height: 200px;
+    }
+  
+    .modalImage {
+      max-height: 250px;
+    }
+  }
