feat: fixed position for header and scrool in mobile modal. Add validation on phone number

--- a/src/pages/Orders/Orders.module.css
+++ b/src/pages/Orders/Orders.module.css
@@ -19,7 +19,11 @@
   }
   
   
-  
+  .header{
+    margin: 0;
+    padding-top: 100px;
+    text-align: center;
+  }
   
   .searchButton {
     padding: 12px 20px;
