--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,10 +1,18 @@
+html {
+    overflow-y: scroll;
+}
+
 .header {
+    box-sizing: border-box;
+    margin: 0;
+    position: fixed;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-around;
     background-color: #1a1616;
     padding: 15px 20px;
-    height: 50px;
+    z-index: 10000;
 }
 
 .logo img {
