--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -44,14 +44,6 @@
     text-align: center;
   }
   
-  .modal {
-    max-width: 600px;
-    margin: 20px auto;
-    background: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    outline: none;
-  }
   
   .modalImage {
     max-width: 55rem;
@@ -109,7 +101,7 @@
     max-width: 600px;
     width: 90%;
     max-height: 90vh; 
-    margin: 40px auto;
+    margin: 100px auto;
     background: #f9f9f9;
     padding: 24px;
     border-radius: 20px;
@@ -280,6 +272,38 @@
   .modalFooter button:last-child:hover {
     background: #cfcfcf;
   }
+  .modalContent {
+    flex-grow: 1;
+    overflow-y: auto;
+    padding: 10px;
+    max-height: 60vh;
+    position: relative;
+    -webkit-overflow-scrolling: touch; /* Обеспечивает плавную прокрутку на iOS */
+}
+
+.modalContent::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 20px;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
+}
+
+.modalContent::-webkit-scrollbar {
+    width: 8px;
+}
+
+.modalContent::-webkit-scrollbar-thumb {
+    background-color: #007aff;
+    border-radius: 10px;
+}
+
+.modalContent::-webkit-scrollbar-thumb:hover {
+    background-color: #005ecb;
+}
+
   @media (max-width: 600px) {
     .modal {
       width: 90%;
@@ -288,7 +312,7 @@
       justify-content: center;
     }
     .modalContent {
-      max-height: 50vh;
+      max-height: 60vh;
     }
   
     .modalImage {
