--- a/src/pages/Cart/Cart.module.css
+++ b/src/pages/Cart/Cart.module.css
@@ -6,9 +6,10 @@
   }
   
   .cart h2 {
+    padding-top: 100px;
     font-size: 32px;
     font-weight: 600;
-    margin: 40px 0;
+    margin: 0;
     text-align: center;
   }
   
@@ -122,7 +123,6 @@
   
     .cart h2 {
       font-size: 24px;
-      margin: 20px 0;
     }
   
     .cartTable thead {
