--- a/src/pages/Checkout/Checkout.module.css
+++ b/src/pages/Checkout/Checkout.module.css
@@ -7,10 +7,12 @@
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
   }
   
-  h2 {
+  .header {
     text-align: center;
     font-weight: 600;
     color: #333;
+    margin: 0;
+    padding-top: 80px;
   }
   
   .inputGroup {
