--- a/src/components/OrderList/OrderList.module.css
+++ b/src/components/OrderList/OrderList.module.css
@@ -44,9 +44,13 @@
 .cartControls button:hover {
     background-color: rgba(0, 113, 227, 0.1);
 }
-
-/* ===== Мобильная версия ===== */
+.mobileDecsr{
+    display: none;
+}
 @media (max-width: 768px) {
+    .mobileDecsr{
+        display: inline-block;
+    }
     .orderTable {
         display: block;
         width: 100%;
