--- a/src/pages/Main/Main.module.css
+++ b/src/pages/Main/Main.module.css
@@ -1,5 +1,157 @@
-.header{
+main {
+    background-color: #f5f5f5;
+}
+html {
+    scroll-behavior: smooth;
+    }
+.header {
     text-align: center;
-    margin: 0;
-    padding-top: 100px;
+    font-weight: 300;
+    margin: 20px 0 50px;
+    font-size: 28px;
+    line-height: 1.6;
+}
+.anchor{
+    position: absolute;
+    bottom: 50px;
+}
+.image {
+    background-image: url(../../img/___9-1.jpg);
+}
+
+.slide .image {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-color: #000;
+    background-repeat: no-repeat;
+    background-position: center center;
+    text-align: center;
+    vertical-align: middle;
+    position: relative;
+    background-attachment: fixed;
+    overflow: hidden;
+}
+
+.slide {
+    width: 100%;
+    display: inline-block;
+    height: 100vh;
+}
+
+.caption {
+    max-width: calc(100% - 140px);
+    width: 1500px;
+    position: absolute;
+    left: 10px;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    margin: 0 auto;
+    white-space: normal;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    font-weight: 700;
+}
+
+.title {
+    display: block;
+    padding: 2px 0;
+    font-size: 48px;
+    line-height: normal;
+    color: #ffffff;
+    padding-right: 40%;
+}
+
+.ussmore {
+    display: block;
+    min-width: 100%;
+    margin-top: 70px;
+}
+
+.ussmore a {
+    position: relative;
+    background: #000;
+    color: #fff;
+    display: inline-block;
+    font-size: 17px;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    padding: 21px 30px;
+    text-decoration: none;
+    min-width: 190px;
+    border-radius: 30px;
+    text-transform: uppercase;
+}
+
+.uss_shop_content {
+    text-align: left;
+    font-size: 20px;
+    max-width: 1080px;
+    margin: 0 auto;
+
+    line-height: 1.8;
+    color: #333;
+}
+
+@media (max-width: 1024px) {
+    .title {
+        font-size: 36px;
+        padding-right: 20%;
+    }
+    .caption {
+        width: 90%;
+        left: 5%;
+        right: 5%;
+    }
+    .uss_shop_content{
+        padding: 0 15px;
+    }
+}
+
+@media (max-width: 768px) {
+    .title {
+        font-size: 28px;
+        padding-right: 10%;
+    }
+    .ussmore {
+        margin-top: 40px;
+    }
+    .ussmore a {
+        font-size: 15px;
+        padding: 15px 25px;
+    }
+    .caption {
+        align-items: center;
+        text-align: center;
+    }
+    .uss_shop_content {
+        font-size: 18px;
+        padding: 0 20px;
+    }
+}
+
+@media (max-width: 480px) {
+    .uss_shop_content{
+        padding: 0 15px;
+    }
+    .title {
+        font-size: 22px;
+        padding-right: 5%;
+    }
+    .ussmore a {
+        font-size: 14px;
+        padding: 12px 20px;
+    }
+    .header {
+        font-size: 24px;
+        margin: 10px 0 30px;
+        padding: 0 2px;
+    }
+    .uss_shop_content {
+        font-size: 16px;
+    }
 }
