feat: change text and mobile image

--- a/src/pages/Checkout/Checkout.module.css
+++ b/src/pages/Checkout/Checkout.module.css
@@ -85,3 +85,8 @@
   .submitButton:disabled{
     background: gray
   }
+  .inputGroup p{
+    font-size: 16px;
+    line-height: 1.6;
+    font-weight: 600;
+  }
