--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -43,16 +43,7 @@
     color: #666;
     text-align: center;
   }
-  
-  
-  .modalImage {
-    max-width: 55rem;
-    height: 34rem;
-    margin-bottom: 16px;
-    align-self: center;
-    justify-self: center;
-  }
-  
+
   .thumbnailContainer {
     display: flex;
     gap: 8px;
@@ -97,36 +88,7 @@
   .cartControls button {
     padding: 8px 12px;
   }
-  .modal {
-    max-width: 600px;
-    width: 90%;
-    max-height: 90vh; 
-    margin: 100px auto;
-    background: #f9f9f9;
-    padding: 24px;
-    border-radius: 20px;
-    outline: none;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-  }
-  
-  .modal h2 {
-    font-size: 22px;
-    font-weight: 600;
-    margin-bottom: 16px;
-    color: #333;
-  }
-  
-  .modalImage {
-    max-width: 100%;
-    height: auto;
-    border-radius: 12px;
-    margin-bottom: 16px;
-  }
-  
+
   .thumbnailContainer {
     display: flex;
     gap: 8px;
@@ -182,8 +144,9 @@
   .cartControls {
     display: flex;
     align-items: center;
+    align-self: center;
     gap: 8px;
-    margin-top: 16px;
+    margin: 0;
   }
   
   .cartControls button {
@@ -197,6 +160,25 @@
     cursor: pointer;
     transition: background 0.2s ease;
   }
+  .modal {
+    max-width: 900px;
+    width: 90%;
+    max-height: 83vh; 
+    margin: 100px auto;
+    background: #f9f9f9;
+    padding: 24px;
+    border-radius: 20px;
+    outline: none;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  
+
+  
+
   
   .modal button:hover {
     background: #005ecb;
@@ -227,10 +209,9 @@
   .modal > button:last-child:hover {
     background: #cfcfcf;
   }
-
   .modalImage {
     max-width: 100%;
-    max-height: 300px; /* Ограничение высоты */
+    height: 500px;
     border-radius: 12px;
     margin-bottom: 16px;
     object-fit: contain;
@@ -239,13 +220,25 @@
     flex-grow: 1; 
     overflow-y: auto;
     padding: 10px;
-    max-height: 60vh; 
+    min-height: 70vh; 
+    max-height: 80%; 
+  }
+  .modalContent h2 {
+    font-size: 22px;
+    font-weight: 700;
+    margin-bottom: 16px;
+    color: #272727;
+  }
+  .modalContent p{
+    font-size: 18px;
+    font-weight: 400;
   }
   .modalFooter {
     margin-top: 16px;
     display: flex;
     flex-direction: column;
     gap: 8px;
+    padding-bottom: 16px;
   }
   
   .modalFooter button {
@@ -276,7 +269,6 @@
     flex-grow: 1;
     overflow-y: auto;
     padding: 10px;
-    max-height: 60vh;
     position: relative;
     -webkit-overflow-scrolling: touch; /* Обеспечивает плавную прокрутку на iOS */
 }
@@ -296,7 +288,7 @@
     background-color: #005ecb;
 }
 
-  @media (max-width: 600px) {
+  @media (max-width: 1024px) {
     .modal {
       width: 90%;
     }
