--- a/src/pages/Main/Main.module.css
+++ b/src/pages/Main/Main.module.css
@@ -21,17 +21,19 @@ html {
 .image {
     background-image: url(../../img/___9-1.jpg);
     filter: brightness(88%);
-}
-
-.slide .image {
     display: block;
     width: 100%;
     height: 100%;
+    background-size: cover;
     background-color: #000;
+    background-repeat: no-repeat;
+    background-position: center;
     text-align: center;
     position: relative;
+    background-attachment: fixed;
     overflow: hidden;
 }
+
 
 .slide {
     width: 100%;
@@ -171,6 +173,11 @@ html {
     }
     .image {
         background-image: url(../../img/___9-1mob.png);
+        background-size: auto;
+        height: 100%;
+        width: auto;
+        overflow: hidden;
+        background-position: bottom;
     }
     .uss_shop_content{
         padding: 0 15px;
