--- a/src/pages/Main/Main.module.css
+++ b/src/pages/Main/Main.module.css
@@ -121,7 +121,7 @@ body {
     .image {
         background-repeat: no-repeat;
         background-position: center;
-        background-attachment: fixed;
+        background-attachment: scroll;
         background-size: cover;
     }
 }
