--- a/src/components/ProductList/ProductList.module.css
+++ b/src/components/ProductList/ProductList.module.css
@@ -1,6 +1,9 @@
-.productList{
+.productList {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
     justify-content: center;
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 20px;
+    gap: 15px;
 }
