--- a/src/App.css
+++ b/src/App.css
@@ -13,4 +13,5 @@
     justify-content: center;
     align-items: center;
     background: rgba(0, 0, 0, 0.5) !important;
+    position: relative;
 }
