--- a/src/pages/Cart/Cart.module.css
+++ b/src/pages/Cart/Cart.module.css
@@ -14,7 +14,11 @@
 .cartTable {
   padding: 10px;
 }
-
+.emptyCart{
+  font-size: 32px;
+  font-weight: 600;
+  text-align: center;
+}
 /* Контейнер для центрирования и ограничения ширины */
 .container {
   max-width: 1440px;
@@ -71,5 +75,8 @@
 @media (max-width: 600px) {
   .totalPrice{
     font-size: 18px;
+  }
+  .emptyCart{
+    font-size: 24px;
   }
 }
