--- a/src/pages/Main/Main.module.css
+++ b/src/pages/Main/Main.module.css
@@ -69,7 +69,7 @@ body {
     display: block;
     margin-top: 70px;
     width: 100%;
-    text-align: center;
+    text-align: left;
 }
 
 .ussmore a {
