--- a/src/pages/Main/Main.module.css
+++ b/src/pages/Main/Main.module.css
@@ -153,6 +153,7 @@ body {
     }
     .ussmore {
         margin-top: 40px;
+        text-align: center;
     }
     .ussmore a {
         font-size: 15px;
