--- a/src/components/ErrorNotification/ErrorNotification.module.css
+++ b/src/components/ErrorNotification/ErrorNotification.module.css
@@ -1,11 +1,9 @@
-.errorNotification {
+.notification {
     position: fixed;
     top: 100px;
     right: 20px;
-    max-width: 300px;
+    max-width: 320px;
     padding: 12px 16px;
-    background: rgba(255, 77, 79, 0.95);
-    color: #fff;
     font-size: 16px;
     font-weight: 500;
     border-radius: 12px;
@@ -17,54 +15,62 @@
     transform: translateY(-20px);
     animation: fadeIn 0.3s ease-out forwards, fadeOut 0.3s ease-in 4.7s forwards;
     z-index: 1000;
-}
-
-.errorNotification button {
+    color: white;
+  }
+  
+  .notification button {
     background: transparent;
     border: none;
-    color: #fff;
+    color: white;
     font-size: 20px;
     cursor: pointer;
     margin-left: 10px;
-}
-
-.errorNotification button:hover {
-    color: #ffcccc;
-}
-
-
-@keyframes fadeIn {
+  }
+  
+  .notification button:hover {
+    color: #eee;
+  }
+  
+  .notification.error {
+    background: rgba(255, 77, 79, 0.95);
+  }
+  
+  .notification.success {
+    background: rgba(76, 175, 80, 0.95); /* зелёный */
+  }
+  
+  @keyframes fadeIn {
     from {
-        opacity: 0;
-        transform: translateY(-20px);
+      opacity: 0;
+      transform: translateY(-20px);
     }
     to {
-        opacity: 1;
-        transform: translateY(0);
+      opacity: 1;
+      transform: translateY(0);
     }
-}
-
-
-@keyframes fadeOut {
+  }
+  
+  @keyframes fadeOut {
     from {
-        opacity: 1;
-        transform: translateY(0);
+      opacity: 1;
+      transform: translateY(0);
     }
     to {
-        opacity: 0;
-        transform: translateY(-20px);
+      opacity: 0;
+      transform: translateY(-20px);
     }
-}
-
-@media (max-width: 480px) {
-    .errorNotification {
-        right: 10px;
-        max-width: 250px;
-        font-size: 14px;
-        padding: 10px 14px;
+  }
+  
+  @media (max-width: 480px) {
+    .notification {
+      right: 10px;
+      max-width: 250px;
+      font-size: 14px;
+      padding: 10px 14px;
     }
-    
-    .errorNotification button {
-        font-size: 18px;
+  
+    .notification button {
+      font-size: 18px;
     }
-}
+  }
+  
