--- a/src/components/PcBuilder/PcBuilder.module.css
+++ b/src/components/PcBuilder/PcBuilder.module.css
@@ -26,6 +26,11 @@
     border-radius: 12px;
     border: 1px solid #e6e6e6;
 }
+.badgeRequired > span {
+    color: #ff3b30;
+    margin-left: 4px;
+    font-weight: 700;
+}
 
 @media (max-width: 1024px) {
     .layout {
