--- a/src/pages/Cart/Cart.module.css
+++ b/src/pages/Cart/Cart.module.css
@@ -1,5 +1,6 @@
 .cart {
   margin: 0 auto;
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell;
 }
 
@@ -24,6 +25,7 @@
   max-width: 1440px;
   margin: 0 auto;
   padding: 20px;
+  min-height: 100dvh;
 }
 
 .totalPrice {
@@ -35,7 +37,6 @@
   padding-right: 10px;
 }
 
-/* Убираем фиксированное позиционирование у футера */
 .cartFooter {
   display: flex;
   justify-content: center;
