--- a/src/pages/Checkout/Checkout.module.css
+++ b/src/pages/Checkout/Checkout.module.css
@@ -6,7 +6,7 @@
     border-radius: 20px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
   }
-  
+ 
   .header {
     text-align: center;
     font-weight: 600;
@@ -93,6 +93,7 @@
   .checkboxGroup {
     display: flex;
     align-items: center;
+    
     gap: 10px;
     margin-bottom: 15px;
   }
@@ -105,11 +106,15 @@
   }
   
   .checkboxGroup label {
+    display: block;
     font-size: 16px;
     color: #333;
     font-weight: 500;
     cursor: pointer;
     user-select: none;
     padding-top: 5px;
+    margin-top: 0;
   }
-  
+  form label{
+    margin-top: 10px;
+  }
